--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -8,7 +8,7 @@
   <div class="first-section fxone-first-section-background mobile-column">
       <div class="first-section-text" id="cost-text">
         <h1 class="responsive-header w-100"><%= t("cost_of_ownership.first_section_title") %> <br> <%= t("cost_of_ownership.first_section_sub_title") %> <span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo-right") %></span></h1>
-        <p class="paragraph-text"><%= t("cost_of_ownership.first_section_text") %></p>
+        <p class="responsive-text-small grey"><%= t("cost_of_ownership.first_section_text") %></p>
       </div>
       <%= cl_image_tag("Piggy_1_al3kec.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
