--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -96,14 +96,14 @@
             <h2 style="margin-bottom: 25px;"><%= t("software.third_section_left_title") %></h2>
             <p class="bold one-rem-text"><%= t("software.third_section_left_sub_title") %></p>
             <ul style="padding-left: 16px;">
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_one") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_two") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_three") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_four") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_five") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_six") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_seven") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_eight") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_one") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_two") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_three") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_four") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_five") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_six") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_seven") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_eight") %></li>
             </ul>
             <p class="one-rem-text grey-text pl-3" style="font-size: 12px !important; line-height: 18px !important;"><%= t("software.third_section_left_text_nine") %></p>
           </div>
@@ -111,16 +111,16 @@
             <h2 style="margin-bottom: 25px;"><%= t("software.third_section_right_title") %></h2>
             <p class="bold one-rem-text"><%= t("software.third_section_right_sub_title") %></p>
             <ul style="padding-left: 16px;">
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_one") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_two") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_three") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_one") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_two") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_three") %></li>
             </ul>
             <p class="bold one-rem-text"><%= t("software.third_section_right_title_two") %></p>
             <ul style="padding-left: 16px;">
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_four") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_five") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_six") %></li>
-              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_seven") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_four") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_five") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_six") %></li>
+              <li class="responsive-text-small grey" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_seven") %></li>
             </ul>
           </div>
       </div>
