--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,14 @@
     <% end %>
     <div class="d-flex p-3 justify-content-between mid-screen-min" >
       <div class="navbar-item hidden">
-        <a href="#" role="button" id="productsDropdown" class="navbar-title nav-left" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a href="#" role="button" id="productsDropdown"
+        class=
+        <% if params[:action] == 'fxone_standard' || params[:action] == 'fxone_remote' || params[:action] == 'fxone_plus' || params[:action] == 'software' || params[:action] == 'inks_and_consumables'  %>
+          "navbar-title nav-left navbar-title-underline"
+        <% else %>
+          "navbar-title nav-left"
+        <% end %>
+         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= t("navbar.products") %> <i class="fas fa-chevron-down small-chevron"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="productsDropdown">
@@ -14,22 +21,22 @@
               <a href="#" style="pointer-events: none;">
                 <%= image_tag 'icon-1.png' %><%= t("navbar.printers") %>
               </a>
-              <%= link_to fxone_standard_path, class: 'printers-text-container mt-1' do %>
+              <%= link_to fxone_standard_path, class: "#{ params[:action] == 'fxone_standard' ? 'navbar-dropdown-item-active printers-text-container mt-1' : 'printers-text-container mt-1' }" do %>
                 <span class="printers-text"><%= t("navbar.printer_one") %></span><i class="fas fa-angle-right"></i>
               <% end %>
-              <%= link_to fxone_remote_path, class: 'printers-text-container' do %>
+              <%= link_to fxone_remote_path, class: "#{ params[:action] == 'fxone_remote' ? 'navbar-dropdown-item-active printers-text-container' : 'printers-text-container' }" do %>
                 <span class="printers-text"><%= t("navbar.printer_two") %></span><i class="fas fa-angle-right"></i>
               <% end %>
-              <%= link_to fxone_plus_path, class: 'printers-text-container' do %>
+              <%= link_to fxone_plus_path, class: "#{ params[:action] == 'fxone_plus' ? 'navbar-dropdown-item-active printers-text-container' : 'printers-text-container' }" do %>
                 <span class="printers-text"><%= t("navbar.printer_three") %></span><i class="fas fa-angle-right"></i>
               <% end %>
             </li>
-            <li>
+            <li class="<%= params[:action] == 'software' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to software_path do %>
                 <%= image_tag 'icon-2.png' %><%= t("navbar.software") %>
               <% end %>
             </li>
-            <li>
+            <li class="<%= params[:action] == 'inks_and_consumables' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to inks_and_consumables_path do %>
                 <%= image_tag 'icon-3.png' %><%= t("navbar.inks") %>
               <% end %>
@@ -38,22 +45,29 @@
         </div>
       </div>
       <div class="navbar-item hidden">
-        <a href="#" role="button" id="serviceDropdown" class="navbar-title nav-left" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a href="#" role="button" id="serviceDropdown"
+        class=
+        <% if params[:action] == 'distributor' || params[:action] == 'cost_of_ownership' || params[:action] == 'faq'  %>
+          "navbar-title nav-left navbar-title-underline"
+        <% else %>
+          "navbar-title nav-left"
+        <% end %>
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= t("navbar.services") %> <i class="fas fa-chevron-down small-chevron"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="serviceDropdown">
           <ul class="dropdown-menu-ul">
-            <li>
+            <li class="<%= params[:action] == 'distributor' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to distributor_path do %>
                 <%= image_tag 'icon-4.png' %><%= t("navbar.distributors") %>
               <% end %>
             </li>
-            <li>
+            <li class="<%= params[:action] == 'cost_of_ownership' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to cost_of_ownership_path do %>
                 <%= image_tag 'icon-5.png' %><%= t("navbar.cost") %>
               <% end %>
               </li>
-            <li>
+            <li class="<%= params[:action] == 'faq' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to faq_path do %>
                 <%= image_tag 'icon-6.png' %><%= t("navbar.FAQ") %>
               <% end %>
@@ -62,22 +76,29 @@
         </div>
       </div>
       <div class="navbar-item hidden">
-        <a href="#" role="button" id="companyDropdown" class="navbar-title nav-left" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a href="#" role="button" id="companyDropdown"
+        class=
+        <% if params[:action] == 'about' || params[:action] == 'index'   %>
+          "navbar-title nav-left navbar-title-underline"
+        <% else %>
+          "navbar-title nav-left"
+        <% end %>
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= t("navbar.company") %> <i class="fas fa-chevron-down small-chevron"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="companyDropdown">
           <ul class="dropdown-menu-ul">
-            <li>
+            <li class="<%= params[:action] == 'about' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to about_path do %>
                 <%= image_tag 'icon-7.png' %><%= t("navbar.about") %>
               <% end %>
             </li>
-            <li>
+            <li class="<%= params[:controller] == 'jobs' && params[:action] == 'index' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to jobs_path do %>
                 <%= image_tag 'icon-8.png' %><%= t("navbar.careers") %>
               <% end %>
             </li>
-            <li>
+            <li class="<%= params[:controller] == 'posts' && params[:action] == 'index' ? 'navbar-dropdown-item-active' : '' %>">
               <%= link_to posts_path do %>
                 <%= image_tag 'icon-9.png' %><%= t("navbar.news") %>
               <% end %>
@@ -96,7 +117,7 @@
       <% end %>
     </div>
     <div class="navbar-item">
-      <%= link_to t("navbar.contact"), contact_path, class: "navbar-title nav-right"  %>
+      <%= link_to t("navbar.contact"), contact_path, class: "#{params[:action] == 'contact' ? 'navbar-title nav-right navbar-title-underline' : 'navbar-title nav-right' }"  %>
     </div>
   </div>
   <div id="mobile-navbar">
