--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -315,17 +315,17 @@
   font-size: 20px;
   font-weight: lighter;
   line-height: 30px;
-  color: #717B8D;
+  color: #676767;
   @include for-small-devices-down {
     font-size: 14px;
   }
 }
 
 .responsive-text-small {
-  font-size: 16px;
-  font-weight: lighter;
-  line-height: 30px;
-  color: #717B8D;
+  font-size: 16px !important;
+  font-weight: lighter ;
+  line-height: 30px !important;
+  color: #676767 !important;
   @include for-small-devices-down {
     font-size: 14px;
   }
