--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -24,93 +24,119 @@
       <div class="row justify-content-center fxone-cards">
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-1.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.first_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.first_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.first_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.first_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-2.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.second_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.second_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.second_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.second_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-3.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.third_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.third_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.third_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.third_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-4.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.fourth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.fourth_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.fourth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.fourth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-5.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.fifth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.fifth_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.fifth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.fifth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-6.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.sixth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.sixth_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.sixth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.sixth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-7.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.seventh_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.seventh_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.seventh_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.seventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-8.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.eigth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.eigth_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.eigth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.eigth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-card-icon-9.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.ninth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.ninth_card_text") %></p>
+            <div class="d-flex align-items-start">
+            <%= image_tag 'software-icon-4.png', class: 'about-icon square-card-icon' %>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.ninth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.ninth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-10.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.tenth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.tenth_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.tenth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.tenth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-11.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.eleventh_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.eleventh_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.eleventh_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.eleventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-12.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.twelfth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.twelfth_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.twelfth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.twelfth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
+            <div class="d-flex align-items-start">
             <%= image_tag 'fxone-card-icon-13.png', class: 'about-icon square-card-icon' %>
-            <h6 class="inks-card-header"><%= t("fxone_remote.thirteenth_card_title") %></h6>
-            <p class="paragraph-text inks-card-text"><%= t("fxone_remote.thirteenth_card_text") %></p>
+            <h6 class="inks-card-header mt-4"><%= t("fxone_remote.thirteenth_card_title") %></h6>
+            </div>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.thirteenth_card_text") %></p>
           </div>
         </div>
       </div>
@@ -197,29 +223,29 @@
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_one") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_one") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_one") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_one") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_two") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_two") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_two") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_two") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_three") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_three") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_three") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_three") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_four") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_four") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_four") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_four") %></p>
             </div>
           </div>
         </div>
@@ -227,29 +253,29 @@
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_one") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_one") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_one") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_one") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_two") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_two") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_two") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_two") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_three") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_three") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_three") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_three") %></p>
             </div>
           </div>
           <div class="fxone-sixth-section-check">
             <%= image_tag 'foenix-check.png', width: 20 %>
             <div>
-              <p class="bold s-medium-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_four") %></p>
-              <p class="s-medium-text grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_four") %></p>
+              <p class="bold responsive-text-small mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_four") %></p>
+              <p class="responsive-text-small grey" style="line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_four") %></p>
             </div>
           </div>
         </div>
@@ -264,7 +290,7 @@
         <div class="about-fifth-section-left mobile-center fxone-no-padding" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'fxone-icon-4.png', class: 'about-icon' %>
           <h2 class="about-fifth-section-text"><%= t("fxone_remote.seventh_section_title") %></h2>
-          <p class="responsive-text-small about-fifth-section-text"><%= t("fxone_remote.seventh_section_text") %></p>
+          <p class="responsive-text-small grey about-fifth-section-text"><%= t("fxone_remote.seventh_section_text") %></p>
           <%= cl_image_tag("fxone-remote-graphic-4_lo5sz0.png", :quality=>"auto", class: "about-graphic about-graphic-two show-mobile") %>
         </div>
         <div class="about-fifth-section-right" data-aos="fade-left" data-aos-duration="2000">
@@ -272,7 +298,12 @@
           <%#= image_tag 'about-dots.png', class: 'about-dots-fifth' %>
         </div>
       </div>
-      <div class="fxone-seventh-section-video-container">
+
+      <!-- ************************************************************************ -->
+      <!-- At Martin's request this ⬇️ has been given d-none. Remove at his request -->
+      <!-- ************************************************************************ -->
+
+      <div class="fxone-seventh-section-video-container d-none">
         <div class="fxone-seventh-section-video">
           <iframe class="embed-player" src="https://www.youtube-nocookie.com/embed/oMW-QEs1zmc?controls=0?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
