--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -16,7 +16,7 @@
     <div data-aos="fade-up" data-aos-duration="2000">
       <%= image_tag 'fxone-icon-1.png', class: 'about-icon' %>
     </div>
-    <h2 class="text-center" data-aos="fade-up" data-aos-duration="2000"><%= t("fxone_remote.second_section_title") %></h2>
+    <h2 class="text-center" data-aos="fade-up" data-aos-duration="2000"><%= t("fxone_standard.second_section_title") %></h2>
   </div>
   <div class="fxone-third-section-wrapper">
     <%= cl_image_tag("fxone-standard-slant-with-pill_sxthpz.png", :quality=>"auto", class: "fxone-standard-slant") %>
@@ -27,117 +27,117 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-1.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.first_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.first_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.first_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.first_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-2.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.second_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.second_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.second_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.second_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-3.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.third_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.third_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.third_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.third_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-4.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.fourth_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.fourth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.fourth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.fourth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-5.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.fifth_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.fifth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.fifth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.fifth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-6.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.sixth_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.sixth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.sixth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.sixth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-7.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.seventh_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.seventh_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.seventh_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.seventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-8.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.eigth_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.eigth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.eigth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.eigth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
-              <%= image_tag 'fxone-card-icon-9.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.ninth_card_title") %></h6>
+              <%= image_tag 'software-icon-4.png', class: 'about-icon square-card-icon' %>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.ninth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.ninth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.ninth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-10.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.tenth_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.tenth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.tenth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.tenth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-11.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.eleventh_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.eleventh_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.eleventh_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.eleventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-12.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.twelfth_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.twelfth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.twelfth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.twelfth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-13.png', class: 'about-icon square-card-icon' %>
-              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.thirteenth_card_title") %></h6>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_standard.thirteenth_card_title") %></h6>
             </div>
-            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.thirteenth_card_text") %></p>
+            <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_standard.thirteenth_card_text") %></p>
           </div>
         </div>
       </div>
