--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -292,10 +292,10 @@
     <%= cl_image_tag("fourth-section-bottom-half_j9e2d7.png", :quality=>"auto", class: "fxone-fourth-section-background hide-mobile") %>
     <div class="container">
       <div class="about-section" style="padding-top: 100px;">
-        <div class="about-fifth-section-left mobile-center fxone-no-padding mx-auto" data-aos="fade-up" data-aos-duration="2000">
+        <div class="about-fifth-section-left mobile-center fxone-no-padding mx-auto" data-aos="fade-up" data-aos-duration="2000" style="text-align: center; width: 80%">
           <%= image_tag 'fxone-icon-4.png', class: 'about-icon' %>
-          <h2 class="about-fifth-section-text"><%= t("fxone_standard.seventh_section_title") %></h2>
-          <p class="responsive-text-small about-fifth-section-text"><%= t("fxone_standard.seventh_section_text") %></p>
+          <h2 class=""><%= t("fxone_standard.seventh_section_title") %></h2>
+          <p class="responsive-text-small "><%= t("fxone_standard.seventh_section_text") %></p>
           <%= cl_image_tag("fxone-remote-graphic-4_lo5sz0.png", :quality=>"auto", class: "about-graphic about-graphic-two show-mobile") %>
         </div>
       </div>
