--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,12 @@
 <div class="footer-wrapper">
   <div class="container">
+    <div class="social-links">
+      <a href="https://www.linkedin.com/company/foenix-coding-ltd?trk=vsrp_companies_res_name&trkInfo=VSRPsearchId:2785815191457466628614,VSRPtargetId:10521257,VSRPcmpt:primary"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/Foenix_Coding"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.facebook.com/Foenix-Coding-1506587422999567/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.youtube.com/channel/UCwOnksAykp4MvlLBt9rHo-Q"><i class="fab fa-youtube"></i></a>
+      <a href="https://www.instagram.com/foenix_coding/"><i class="fab fa-instagram"></i></a>
+    </div>
     <div class="footer-foenix">
       <div class="footer-left">
         <div class="footer-top">
