--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,74 +4,33 @@
 <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "about-big-pill") %>
 <div class="about-wrapper">
   <div class="first-section fxone-first-section-background about-top">
-    <div class="first-section-text">
+    <div class="first-section-text mobile-center">
       <h1 class="w-100"><%= t("about.second_section_title") %></h1>
       <p class="responsive-text-small grey w-100"><%= t("about.second_section_text") %><br><br><%= t("about.second_section_text_two") %></p>
     </div>
     <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
-  <div class="about-second-section-wrapper">
+  <div class="about-second-section-wrapper" style="background-color: #F6F7FA;">
     <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "about-little-pill") %>
-    <div class="" style="padding: 0 50px">
-      <div class="about-section mobile-column" style="padding-top: 0px;">
-        <div class="about-second-section-left no-padding-mobile">
-          <%#= cl_image_tag("about-img_gs2pe4.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
-          <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
-        </div>
-        <div class="first-section-text mobile-center" data-aos="fade-up" data-aos-duration="2000">
-          <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
-          <h2><%= t("about.first_section_text") %></h2>
-          <p class="responsive-text-small grey w-100"><%= t("about.first_section_text_two") %><br><br><%= t("about.first_section_text_three") %><br><br><%= t("about.first_section_text_four") %></p>
-        </div>
+    <div class="first-section second-about">
+      <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
+      <div class="first-section-text mobile-center" data-aos="fade-up" data-aos-duration="2000">
+        <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
+        <h2><%= t("about.first_section_text") %></h2>
+        <p class="responsive-text-small grey w-100"><%= t("about.first_section_text_two") %><br><br><%= t("about.first_section_text_three") %><br><br><%= t("about.first_section_text_four") %></p>
       </div>
     </div>
   </div>
-
-  <!-- ************************************************************************ -->
-  <!-- Martin asked for this to be removed, I've added d-none for now in case he wants it back -->
-  <!-- ************************************************************************ -->
-
-  <div class="about-third-section-wrapper d-none">
-    <div class="container">
-      <div class="about-third-section-text" data-aos="fade-up" data-aos-duration="2000">
-        <%= image_tag 'about-icon-2.png', class: 'about-icon' %>
-        <h2 class="text-center"><%= t("about.third_section_title") %></h2>
-        <p class="responsive-text text-center"><%= t("about.third_section_text") %></p>
-      </div>
-    </div>
-  </div>
-  <div class="about-fourth-section-wrapper" style="background-image: url('<%= cl_image_path("about-slanted-background_towjgo.png", :quality=>"auto") %>')">
-    <%#= cl_image_tag("about-slanted-background_towjgo.png", :quality=>"auto", class: "about-graphic slanted-background") %>
-    <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "about-graphic-four d-none") %>
+  <div class="about-second-section-wrapper" style="background-image: url('<%= cl_image_path("about-slanted-background_towjgo.png", :quality=>"auto") %>'); background-size: cover;">
     <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-three' %>
-    <div class="container d-none">
-      <div class="about-fourth">
-        <div class="about-fourth-text-left">
-          <p class="responsive-text"><%= t("about.fourth_section_text_left") %></p>
-        </div>
-        <div class="middle-break" style="height: 100%; border-left: 1px solid black;"></div>
-        <div class="about-fourth-text-right">
-          <p class="responsive-text"><%= t("about.fourth_section_text_right") %></p>
-        </div>
+    <div class="first-section second-about about-top">
+      <div class="first-section-text mobile-center" data-aos="fade-up" data-aos-duration="2000">
+        <%= image_tag 'about-icon-3.png', class: 'about-icon' %>
+        <h2 class="my-4"><%= t("about.fifth_section_title") %></h2>
+        <p class="responsive-text-small"><%= t("about.fifth_section_text_one") %></p>
+        <p class="responsive-text-small"><%= t("about.fifth_section_text_two") %></p>
       </div>
-    </div>
-    <div class="about-fifth-section-wrapper">
-      <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-four hide-mobile' %>
-      <div class="container">
-        <div class="about-section about-fifth-section no-padding-mobile" style="padding-top: 0">
-          <div class="about-fifth-section-left" data-aos="fade-right" data-aos-duration="2000">
-            <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "about-graphic about-graphic-two hide-mobile") %>
-            <%#= image_tag 'about-dots.png', class: 'about-dots-fifth' %>
-          </div>
-          <div class="about-fifth-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
-            <%= image_tag 'about-icon-3.png', class: 'about-icon' %>
-            <h2 class="about-fifth-section-text my-4"><%= t("about.fifth_section_title") %></h2>
-            <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "about-graphic about-graphic-two show-mobile") %>
-            <p class="responsive-text-small about-fifth-section-text"><%= t("about.fifth_section_text_one") %></p>
-            <p class="responsive-text-small about-fifth-section-text"><%= t("about.fifth_section_text_two") %></p>
-          </div>
-        </div>
-      </div>
+      <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
     </div>
   </div>
   <%= render 'shared/newsletter' %>
