--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,15 +23,16 @@
   </div>
   <div class="about-second-section-wrapper" style="background-image: url('<%= cl_image_path("about-slanted-background_towjgo.png", :quality=>"auto") %>'); background-size: cover;">
     <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-three' %>
-    <div class="first-section second-about about-top">
+    <div class="first-section second-about">
+      <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
       <div class="first-section-text mobile-center" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'about-icon-3.png', class: 'about-icon' %>
         <h2 class="my-4"><%= t("about.fifth_section_title") %></h2>
         <p class="responsive-text-small"><%= t("about.fifth_section_text_one") %></p>
         <p class="responsive-text-small"><%= t("about.fifth_section_text_two") %></p>
       </div>
-      <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
     </div>
+    <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-four hide-mobile' %>
   </div>
   <%= render 'shared/newsletter' %>
 </div>
