--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -95,12 +95,33 @@
   position: absolute;
   width: 300px;
   top: 340px;
-  right: -120px;
+  right: 120px;
   z-index: 4;
   @include for-phone-only {
     width: 190px;
     top: 40px;
     right: -120px;
+  }
+  // @include for-large-devices-down {
+  //   right: -395px;
+  // }
+}
+
+.fxone-big-pill-remote {
+  position: absolute;
+  width: 200px;
+  top: 140px;
+  right: 0px;
+  z-index: 4;
+  @include for-medium-devices-down {
+    width: 130px;
+    top: 90px;
+    right: 0px;
+  }
+  @include for-phone-only {
+    width: 80px;
+    top: 80px;
+    right: 0px;
   }
   // @include for-large-devices-down {
   //   right: -395px;
