--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -7,7 +7,7 @@
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill fxone-standard-big-pill show-mobile") %>
     <div class="first-section-text">
       <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_standard.first_section_title") %></h1>
-      <p class="paragraph-text inks-card-text"><%= t("fxone_standard.first_section_text") %></p>
+      <p class="responsive-text-small grey inks-card-text"><%= t("fxone_standard.first_section_text") %></p>
     </div>
     <%= cl_image_tag("fxone-standard-graphic-1_wieclv.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
@@ -153,10 +153,10 @@
       </div>
       <div class="about-section fxone-section">
         <div class="about-first-section-left">
-          <%= cl_image_tag("standard-lhs_av4iam.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("stan-lhs_o7wbl4.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
         <div class="about-first-section-right">
-          <%= cl_image_tag("standard-rhs_gakqh2.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("stand-rhs_eesu1p.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
       </div>
     </div>
