--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
   <div class="first-section fxone-first-section-background about-top">
     <div class="first-section-text mobile-center">
       <h1 class="w-100"><%= t("about.second_section_title") %></h1>
-      <p class="responsive-text-small grey w-100"><%= t("about.second_section_text") %><br><br><%= t("about.second_section_text_two") %></p>
+      <p class="responsive-text-small grey w-100"><%= t("about.second_section_text") %><br><br><%= t("about.second_section_text_two") %> <%= t("about.second_section_text_three") %></p>
     </div>
     <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
