--- a/app/views/pages/sauven_marking.html.erb
+++ b/app/views/pages/sauven_marking.html.erb
@@ -49,7 +49,7 @@
       </div>
       <p class="landing-text mb-0">You can contact us here:</p>
       <p class="landing-text mb-0"><span class="bold">Tel:</span> 0044 1932 701 449</p>
-      <p class="landing-text"><span class="bold">Email:</span> <a href="mailto:hello@myloopbeauty.com">sales@sauven-marking.com</a></p>
+      <p class="landing-text"><span class="bold">Email:</span> <a href="mailto:sales@sauven-marking.com">sales@sauven-marking.com</a></p>
       <p class="landing-text mb-0 bold" style="color: #96B3D7">Thank you!</p>
     </div>
     <div class="maintenance-image">
