--- a/app/views/pages/sauven_marking.html.erb
+++ b/app/views/pages/sauven_marking.html.erb
@@ -8,7 +8,7 @@
       <p class="landing-text mb-0">Sorry for the inconvenience.</p>
       <p class="landing-text">We'll be back up and running as fast as possible</p>
       <p class="landing-text mb-0">In the meantime if you are looking for some information about Sauven Marking please send us an email at:</p>
-      <p class="landing-text"><a href="mailto:hello@myloopbeauty.com">sales@sauven-marking.com</a></p>
+      <p class="landing-text"><a href="mailto:sales@sauven-marking.com">sales@sauven-marking.com</a></p>
       <p class="landing-text">If you have any questions regarding our printers and consumables or if you are looking to repair your Sauven printer please do get in touch.</p>
       <p class="landing-text">We provide a full range of spare parts for both inkjet printers and contact coders.</p>
       <p class="landing-text">We can help you with the following products:​​​​</p>
