--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -17,6 +17,7 @@
             <input type="text" name="country" id="country" placeholder="<%= t('contact.form_country') %>" required="">
             <textarea rows="5" name="message" id="message" placeholder="<%= t('contact.form_message') %>" required=""></textarea>
             <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+            <div class="g-recaptcha" style="margin-top: 20px;" data-sitekey="6Leq5_IUAAAAABljypFOmp3MNhP-UOUDLzmEkGy3"></div>
           <input type="submit" value="Submit">
         </form>
       </div>
