--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -17,8 +17,9 @@
             <input type="text" name="country" id="country" placeholder="<%= t('contact.form_country') %>" required="">
             <textarea rows="5" name="message" id="message" placeholder="<%= t('contact.form_message') %>" required=""></textarea>
             <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-            <div class="g-recaptcha" style="margin-top: 20px;" data-sitekey="6Leq5_IUAAAAABljypFOmp3MNhP-UOUDLzmEkGy3"></div>
-          <input type="submit" value="Submit">
+            <div class="g-recaptcha" style="margin-top: 20px;" data-sitekey="6Leq5_IUAAAAABljypFOmp3MNhP-UOUDLzmEkGy3
+" data-callback="enableBtn"></div>
+          <input disabled id='button1' type="submit" value="Submit">
         </form>
       </div>
       <div class="contact-text">
@@ -34,3 +35,10 @@
     </div>
   </div>
 </div>
+
+<script>
+  function enableBtn(){
+     document.getElementById("button1").disabled = false;
+     document.getElementById("button1").style.opacity = 1
+   }
+</script>
